--- a/Aoife/Aoife.css
+++ b/Aoife/Aoife.css
@@ -37,18 +37,19 @@ a {
 
 .unicorn {
   width: 100vw;
-  height: 100vw;
+  height: 80vw;
 }
 
 /*---Nav Bar---*/
 .navbar {
   margin-top: 5vw;
+  padding: 0 2vw;
   width: 100vw;
 }
 
 .nav-link {
   color: #E5EBB2;
-  font-size: 2vw;
+  font-size: 1.7vw;
 }
 
 .navbar-brand, .navbar-brand-aside, .navbar-brand-title {
@@ -66,7 +67,7 @@ a {
 }
 
 .navbar-brand-aside {
-  font-size: 2vw;
+  font-size: 1.7vw;
 }
 
 .navbar-brand-image {
@@ -80,7 +81,7 @@ a {
 
 /*---- Header----*/
 header {
-  padding: 3vw 0;
+  padding: 3vw 3vw;
 }
 
 .header-title, .header-title-last{
@@ -242,6 +243,7 @@ width: 20vw;
   padding: 5vw 4vw;
   width: 100vw;
 }
+
 .invitation {
   height: 50vw;
   margin: 2vw 0;
